# VeloDetect

./: docker-compose.yml
backend/: requirements.txt
backend/src/: main.py
backend/src/core/: config.py  minio_client.py
backend/src/routers/: __init__.py  minio_router.py
backend/src/services/: minio_service.py
docs/: conf.py  index.md  requirements.txt
velodetect/: pyproject.toml
velodetect/src/velodetect/: main.py
velodetect/src/velodetect/data/: fetch_ohlcv_dataframe.py
velodetect/src/velodetect/indicator/: __init__.py  technical_indicators.py
velodetect/src/velodetect/model/: ohlcv.py
